# osue

./: .gitignore  CMakeLists.txt
1A/: makefile  mydiff.c
1B/: client.c  http.c  http.h  makefile  server.c  url.c  url.h
2/: forksort  forksort.c  forksort_1.c  logger.c  logger.h  makefile  test.in
3/: edge.c  edge.h  generator.c  logger.c  logger.h  makefile  semaph.c  semaph.h  shared.c  shared.h  supervisor.c
Testing/: Test.c  test
